[package]
name = "concurrentlyexec"
version = "0.1.0"
edition = "2024"

[dependencies]
ipc-channel = { version = "0.20", features = ["async"] }
cgroups-rs = "0.4"
tokio = { version = "1", features = ["full", "process"] }
tokio-util = "0.7"
serde = "1"
rand = "0.9"
futures-util = "0.3"
erased-serde = "0.4"
serde_bytes = "0.11"
bincode = { version = "2", features = ["serde", "derive"] }